--- a/index.html
+++ b/index.html
@@ -485,7 +485,8 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                    <a href="/docs/CALL FOR PAPER 1.png" target="_blank"><span class="theme-btn btn-style-two">Conference details</span></a>
+                <a href="/docs/CALL FOR PAPER 1.png" target="_blank"><span class="theme-btn btn-style-two">Conference
+                    details</span></a>
                 <!-- <a href='#check'><span class="theme-btn btn-style-three">Check Scheduling</span></a> -->
               </div>
             </div>
@@ -2569,64 +2570,29 @@
   </div>
   <!--End pagewrapper-->
 
-
-  <!-- Overlay Page -->
-  <div class="overlay" id="overlay"></div>
-  <!-- Overlay End -->
-
-  <!-- Pop UPs -->
-  <!-- <div id="popUp">
-    <span id="toggle">
-      <i class="ri-close-line"></i>
-    </span>
-    <div id="boxL">
-      <p id="title">SCEECS 2026</p> -->
-      <!-- <p class="imagebox">
-
         <!-- Overlay Page -->
-
-      <div class="overlay" id="overlay"></div>
-      <!-- Overlay End -->
-
-      <!-- Pop UPs -->
-      <!-- <div id="popUp">
-
-        <!-- <div class="overlay" id="overlay"></div> -->
+        <div class="overlay" id="overlay"></div>
         <!-- Overlay End -->
     
         <!-- Pop UPs -->
         <!-- <div id="popUp">
-
             <span id="toggle">
                 <i class="ri-close-line"></i>
             </span>
             <div id="boxL">
                 <p id="title">SCEECS 2026</p> -->
-      <!-- <p class="imagebox">
-
+                <!-- <p class="imagebox">
                   <img src="./codeHelp.png" alt="">
                   <img src="./cybrom.png" alt="">
                 </p>
                 <p id="mainHeading">Join us for an exclusive workshop featuring expert sessions by <span style="color: orangered;">Lakshay Kumar</span>  and <span style="color: orangered;"> Love Babbar</span>, curated by Cybrom.</p>
                 <p id="deadlineDisc">⏰ Time's ticking! Register now. 🚀 Limited seats.</p> -->
-      <!-- <p id="disc">SCEECS 2025 is Here!</p> -->
-      <!-- <div id="btn">
+                <!-- <p id="disc">SCEECS 2025 is Here!</p> -->
+                <!-- <div id="btn">
                     <a href="https://linktr.ee/IEEE_MANIT" target="_blank"><button style="cursor: pointer;">Register Now</button></a>
                 </div> -->
-
-    </div>
-  </div>
-  <!-- Pop UPs  End-->
-
-  <!-- </div>
+            <!-- </div>
         </div> -->
-
-
-  <div id="popUp">
-    <span id="toggle">
-      <i class="ri-close-line"></i>
-    </span>
-    <div id="boxL">
 
         <div id="popUp">
             <span id="toggle">
@@ -2639,56 +2605,46 @@
                   
                 </p>
                 <p id="mainHeading" style="font-size:25px;color:#ff006a">Deadline Extended</p>
-                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025</p>
+                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025!</p>
 
+                <p id="deadlineDisc">Submit your papers on Microsoft CMT</p> 
+                <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
+                <div id="btn">
+                    <a href="https://cmt3.research.microsoft.com/SCEECS2026/" target="_blank"><button style="cursor: pointer;">Submit here</button></a>
+                </div>
+            </div>
+        </div>
+        <!-- Pop UPs  End-->
 
-      <p class="imagebox">
-        <img src="logoWhite2026.png" alt="SCEECS-2026">
-
-      </p>
-      <p id="mainHeading" style="font-size:25px;color:#ff006a">Deadline Extended</p>
-      <p id="mainHeading" style="color:#ff006a">Till 8th October 2025!</p>
-
-      <p id="deadlineDisc">Submit your papers on Microsoft CMT</p>
-      <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
-      <div id="btn">
-        <a href="https://cmt3.research.microsoft.com/SCEECS2026/" target="_blank"><button
-            style="cursor: pointer;">Submit here</button></a>
+      <!--Scroll to top-->
+      <div class="scroll-to-top scroll-to-target" data-target="html">
+        <span class="fa fa-angle-double-up"></span>
       </div>
-    </div>
-  </div>
-  <!-- Pop UPs  End-->
 
+      <script src="js/jquery.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/parallax.min.js"></script>
+      <script src="js/jquery.scrollTo.js"></script>
+      <script src="js/appear.js"></script>
+      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="js/jquery.fancybox.js"></script>
+      <script src="js/owl.js"></script>
+      <script src="js/wow.js"></script>
+      <script src="js/magnific-popup.min.js"></script>
+      <script src="js/jquery.countdown.js"></script>
+      <script src="js/jquery-ui.js"></script>
+      <script src="js/paroller.js"></script>
+      <script src="js/script.js"></script>
 
-  <!--Scroll to top-->
-  <div class="scroll-to-top scroll-to-target" data-target="html">
-    <span class="fa fa-angle-double-up"></span>
-  </div>
+      <script>
+        const scrollBtn = document.getElementById("scrollBtn");
+        const scrollSec = document.getElementsByClassName("scrollSec");
 
-  <script src="js/jquery.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/parallax.min.js"></script>
-  <script src="js/jquery.scrollTo.js"></script>
-  <script src="js/appear.js"></script>
-  <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-  <script src="js/jquery.fancybox.js"></script>
-  <script src="js/owl.js"></script>
-  <script src="js/wow.js"></script>
-  <script src="js/magnific-popup.min.js"></script>
-  <script src="js/jquery.countdown.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/paroller.js"></script>
-  <script src="js/script.js"></script>
-
-  <script>
-    const scrollBtn = document.getElementById("scrollBtn");
-    const scrollSec = document.getElementsByClassName("scrollSec");
-
-    scrollBtn.addEventListener('click', () => {
-      scrollSec.scrollIntoView({ behavior: 'smooth' });
-    });
-  </script>
+        scrollBtn.addEventListener('click', () => {
+          scrollSec.scrollIntoView({ behavior: 'smooth' });
+        });
+      </script>
 
 </body>
 
